<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textViewMedicineName"
            android:inputType="TODO">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewDays"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxAllDays" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxMonday" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxTuasday" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxWednesday" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxThursday" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxFriday" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxSaturday" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxSunday" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/textViewReminder"
            android:textColor="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:text="Dodaj" />

</LinearLayout>